@@ -1,0 +1,23 @@
+/*
+**  -*- C -*-
+**
+** zsinhs.c
+** Made by  Bruno JOFRET <bruno.jofret@inria.fr>
+**
+** Started on  Fri Dec  8 12:06:35 2006 jofret
+** Last update Fri Jan 19 15:18:06 2007 jofret
+**
+** Copyright INRIA 2006
+*/
+
+#ifndef STDC99
+#include "doubleComplex.h"
+#else
+#include <complex.h>
+typedef double complex doubleComplex;
+#endif
+
+doubleComplex	zsinhs(doubleComplex z) {
+  /* FIXME: Dummy... */
+  return z;
+}
